# netsight-ops

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SEMVER.md  pyproject.toml
.github/workflows/: ci.yml
netsight_ops/: __init__.py  cli.py  exceptions.py  loader.py  registry.py
netsight_ops/api/: __init__.py  server.py
netsight_ops/api/auth/: __init__.py  api_key.py  context.py  jwt.py  oauth.py
netsight_ops/api/graphql/: __init__.py  queries.py  schema.py  types.py
netsight_ops/api/models/: __init__.py  envelope.py
netsight_ops/api/models/responses/: __init__.py  logs.py  network.py  system.py
netsight_ops/api/routes/: __init__.py  auth.py  devices.py  plugins.py  schema.py
netsight_ops/api/websocket/: __init__.py  handlers.py
netsight_ops/dev/: __init__.py
netsight_ops/mcp/: __init__.py  server.py  transport.py
netsight_ops/testing/: __init__.py
tests/: test_api_auth_context.py  test_api_envelope.py  test_api_graphql.py  test_api_jwt_auth.py  test_api_key_auth.py  test_api_routes_devices.py  test_api_routes_schema.py  test_api_websocket.py  test_mcp_server.py  test_service_registry.py
